unpackaged/objects/Discount_model__c.object
<CustomObject>
  <description>Used for storing discount models related to Contracts</description>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Contract</fullName>
        </value>
        <value>
          <fullName>Order</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Webshop_discount__c</fullName>
    <label>Webshop discount</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <label>Discount Model</label>
  <listViews>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
  </listViews>
  <nameField>
    <label>Discount Model Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Discount Model</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>